--- a/src/locales/ko/translation.json
+++ b/src/locales/ko/translation.json
@@ -10,7 +10,7 @@
 	"aboutSection": {
 		"title": ["흩어지던 내 링크,", "쉽게 저장하고 더 잘 읽을 수 없을까?"],
 		"text": [
-			"유어링크는 시간 들여 찾은 정보들을 쉽게 정리하고 읽을 수 있도록 도와주는 리서치 생상성 향상 서비스입니다.",
+			"유어링크는 시간 들여 찾은 정보들을 쉽게 정리하고 읽을 수 있도록 도와주는 리서치 생산성 향상 서비스입니다.",
 			"유어링크에서 나만의 지식 창고를 만들고 필요할 때 언제든 꺼내 읽으세요."
 		],
 		"subText": [
