--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,91 +1,53 @@
 {
-	"introSection": {
-		"title": "나의 성장을 도와주는 링크 관리 서비스",
-		"text": [
-			"내가 찾은 모든 링크, 까먹지 않고 다시 읽을 수 있도록 도와드려요.",
-			"유어링크에서 쉽게 저장하고, 분류하고, 읽어보세요!"
-		],
-		"button": "지금 시작하기"
-	},
-	"aboutSection": {
-		"title": ["흩어지던 내 링크,", "쉽게 저장하고 더 잘 읽을 수 없을까?"],
-		"text": [
-			"유어링크는 시간 들여 찾은 정보들을 쉽게 정리하고 읽을 수 있도록 도와주는 리서치 생상성 향상 서비스입니다.",
-			"유어링크에서 나만의 지식 창고를 만들고 필요할 때 언제든 꺼내 읽으세요."
-		],
-		"subText": [
-			"발견한 정보",
-			"쉽고 빠르게 저장해요",
-			"저장한 정보를",
-			"잊지 않도록 알려드려요",
-			"정보를 쉽게 분류,",
-			"편집하고 메모할 수 있어요"
-		]
-	},
-	"historySection": {
-		"title": ["방문기록 선택하고", "끌어다 놓기만 하세요"],
-		"text": [
-			"내가 방문했던 웹사이트, 방문기록에 다 있어요.",
-			"보관하고 싶은 링크를 원하는 카테고리로 쉽게 옮겨보세요.",
-			"*유어링크는 크롬 방문기록을 그대로 가져오기 때문에 저희는 볼 수 없어요."
-		]
-	},
-	"categorySection": {
-		"title": [
-			"내가 보관한 모든 링크,",
-			"이제 카테고리로 관리하세요.",
-			"중요한 카테고리는 ",
-			"Favorite",
-			"으로!"
-		],
-		"text": [
-			"비슷한 정보끼리 묶어서 카테고리에 보관해보세요.",
-			"나중에 찾기도 쉽고, 다시 읽을 가능성도 높아져요.",
-			"자주 읽는 중요한 정보는 최상단에 고정하세요.",
-			"우선순위에 따라 카테고리를 옮길 수 있습니다."
-		]
-	},
-	"directSaveSection": {
-		"title": ["웹 서핑 중 발견한 정보,", "그 자리에서 바로 저장"],
-		"text": [
-			"링크 저장과 동시에 내가 설정한 카테고리로",
-			"분류되니까 나중에 링크를 찾기 쉬워요."
-		]
-	},
-	"cardsSection": {
-		"title": ["저장한 링크,", "보기 편한 카드로 보여드려요."],
-		"text": [
-			"링크가 쌓이면 쌓일수록 찾기 어려웠습니다.",
-			"필요한 정보를 담은 카드로 빠르게 링크를 발견하세요."
-		],
-		"subText": [
-			"중요한 정보는 즐겨찾기,",
-			"내 링크 공유하고 싶으면 복사하기,",
-			"메모하고 싶다면 편집하기,"
-		]
-	},
-	"alarmSection": {
-		"title": ["알람 설정하면 원하는 시간에", "저장한 링크를 보내드려요."],
-		"text": [
-			"읽고 싶은 정보를 고르고,",
-			"알림을 받고 싶은",
-			"날짜와 시간을 설정하세요.",
-			"시간이 되면 크롬으로 알려드려요.",
-			"아직 읽지 않은 알림은 따로 보관해드려요."
-		]
-	},
-	"getStartedSection": {
-		"title": "지금 바로 유어링크를 시작해보세요!",
-		"text": [
-			"쉬운 링크 보관과 정리, 그리고 알람으로",
-			"당신의 목표 달성과 성장을 도와드릴게요."
-		],
-		"button": "지금 시작하기"
-	},
-	"headerSection": {
-		"button": "지금 시작하기"
-	},
-	"footerSection": {
-		"text": ["©2021 Urlink. All Rights Reserved.", "서비스 이용약관"]
-	}
+	"나의 성장을 도와주는 링크 관리 서비스": "Organize links easily and grow fast",
+	"내가 찾은 모든 링크, 까먹지 않고 다시 읽을 수 있도록 도와드려요.": "All the links you found, help you read them again",
+	"유어링크에서 쉽게 저장하고, 분류하고, 읽어보세요!": "Easily save, categorize, and read on urLink",
+	"흩어지던 내 링크,": "All the URLs I want to keep,",
+	"쉽게 저장하고 더 잘 읽을 수 없을까?": "How can I save and read them easily?",
+	"유어링크는 시간 들여 찾은 정보들을 쉽게 정리하고 읽을 수 있도록 도와주는 리서치 생산성 향상 서비스입니다.": "urLink is a research productivity improvement service that helps you easily organize and read the information you have spent time finding.",
+	"유어링크에서 나만의 지식 창고를 만들고 필요할 때 언제든 꺼내 읽으세요.": "Create your own library through urLink and read it whenever you want.",
+	"발견한 정보": "Link you found",
+	"쉽고 빠르게 저장해요": "Save quickly and easily",
+	"저장한 정보를": "The link you saved",
+	"잊지 않도록 알려드려요": "Remind you not to forget",
+	"정보를 쉽게 분류,": "Categorize and edit",
+	"편집하고 메모할 수 있어요": "your link easily",
+	"방문기록 선택하고": "Just drag and drop",
+	"끌어다 놓기만 하세요": "your Chrome history",
+	"내가 방문했던 웹사이트, 방문기록에 다 있어요.": "All the websites I visited are in Chrome history.",
+	"보관하고 싶은 링크를 원하는 카테고리로 쉽게 옮겨보세요.": "Easily categorize the links you want to keep.",
+	"*유어링크는 크롬 방문기록을 그대로 가져오기 때문에 저희는 볼 수 없어요.": "* We just import your Chrome browsing history as it is, so we can't see it.",
+	"내가 보관한 모든 링크,": "All the links you saved,",
+	"이제 카테고리로 관리하세요.": "Manage them into categories.",
+	"중요한 카테고리는 ": "Set important categories ",
+	"Favorite": "as Favorite",
+	"으로!": "",
+	"비슷한 정보끼리 묶어서 카테고리에 보관해보세요.": "Try grouping similar information and keeping it in categories.",
+	"나중에 찾기도 쉽고, 다시 읽을 가능성도 높아져요.": "It's easier to find later, and more likely to be read again.",
+	"자주 읽는 중요한 정보는 최상단에 고정하세요.": "Pin important information you read frequently at the top.",
+	"우선순위에 따라 카테고리를 옮길 수 있습니다.": " You can move categories according to their priority.",
+	"웹 서핑 중 발견한 정보,": "Website you found",
+	"그 자리에서 바로 저장": "Save it on the spot",
+	"링크 저장과 동시에 내가 설정한 카테고리로": "As soon as the link is saved, it's classified into the category.",
+	"분류되니까 나중에 링크를 찾기 쉬워요.": "So, it's easy to find the link later",
+	"저장한 링크,": "We will show you the saved link",
+	"보기 편한 카드로 보여드려요.": "as a card that is easy to see.",
+	"링크가 쌓이면 쌓일수록 찾기 어려웠습니다.": "The more links are stacked, the harder it is to find.",
+	"필요한 정보를 담은 카드로 빠르게 링크를 발견하세요.": "Find the link quickly with the card containing the information you need.",
+	"중요한 정보는 즐겨찾기,": "Links can be stored in Favorites",
+	"내 링크 공유하고 싶으면 복사하기,": "Copy link if you want to share it,",
+	"메모하고 싶다면 편집하기,": "Take notes and edit link cards",
+	"알람 설정하면 원하는 시간에": "If you set an alarm,",
+	"저장한 링크를 보내드려요.": "you will recieve a notification with the link you want.",
+	"읽고 싶은 정보를 고르고,": "Choose the link",
+	"알림을 받고 싶은": "Set the date and time",
+	"날짜와 시간을 설정하세요.": "you want to be notified",
+	"시간이 되면 크롬으로 알려드려요.": "Get Chrome Push Notification when it's time.",
+	"아직 읽지 않은 알림은 따로 보관해드려요.": "Archive notifications you haven't read yet.",
+	"지금 바로 유어링크를 시작해보세요!": "Start urLink right now!",
+	"쉬운 링크 보관과 정리, 그리고 알람으로": "We will help you grow",
+	"당신의 목표 달성과 성장을 도와드릴게요.": "with easy link storage, organization, and alarms.",
+
+	"지금 시작하기": "Get Started",
+	"서비스 이용약관": "Terms of service"
 }
