♻️ 영어 번역 수정

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -14,7 +14,7 @@
 	"편집하고 메모할 수 있어요": "your link easily",
 	"방문기록 선택하고": "Just drag and drop",
 	"끌어다 놓기만 하세요": "your Chrome history",
-	"내가 방문했던 웹사이트, 방문기록에 다 있어요.": "All the websites I visited are in Chrome history.",
+	"내가 방문했던 웹사이트, 방문기록에 다 있어요.": "",
 	"보관하고 싶은 링크를 원하는 카테고리로 쉽게 옮겨보세요.": "Easily categorize the links you want to keep.",
 	"*유어링크는 크롬 방문기록을 그대로 가져오기 때문에 저희는 볼 수 없어요.": "* We just import your Chrome browsing history as it is, so we can't see it.",
 	"내가 보관한 모든 링크,": "All the links you saved,",
