✨ Footer에 문의(contact) 버튼 추가

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -49,5 +49,6 @@
 	"당신의 목표 달성과 성장을 도와드릴게요.": "with easy link storage, organization, and alarms.",
 
 	"지금 시작하기": "Get Started",
-	"서비스 이용약관": "Terms of service"
+	"서비스 이용약관": "Terms of service",
+	"문의": "Contact Us"
 }
